--- a/index.html
+++ b/index.html
@@ -163,23 +163,23 @@
         </div>
 
         <div class="footer-item"> 
-            <a href="faq">Help Centre</a>
-            <a href="faq">Account</a>
-            <a href="faq">Speed Test</a>
-            <a href="faq">Legal Notices</a>
+            <a href="#">Help Centre</a>
+            <a href="#">Account</a>
+            <a href="#">Speed Test</a>
+            <a href="#">Legal Notices</a>
         </div>
         <div class="footer-item">
-            <a href="faq">Media Centre</a>
-            <a href="faq">Privacy</a>
-            <a href="faq">Cookie Preferences</a> 
-            <a href="faq">Corporate</a>
+            <a href="#">Media Centre</a>
+            <a href="#">Privacy</a>
+            <a href="#">Cookie Preferences</a> 
+            <a href="#">Corporate</a>
         </div>
 
         <div class="footer-item">
-            <a href="faq">Contact Us</a>
-            <a href="faq">Speed Test</a> 
-            <a href="faq">Legal Notices</a> 
-            <a href="faq">Only on Netflix</a>
+            <a href="#">Contact Us</a>
+            <a href="#">Speed Test</a> 
+            <a href="#">Legal Notices</a> 
+            <a href="#">Only on Netflix</a>
         </div>
     </div>
     <button class="btn">
