--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           autoplay
           loop
           muted
+          playsinline
         ></video>
       </div>
     </section>
@@ -94,6 +95,7 @@
           autoplay
           loop
           muted
+          playsinline
         ></video>
       </div>
     </section>
