--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
         </p>
       </div>
 
-      
       <div class="secImg">
         <img
           src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png"
@@ -152,42 +151,39 @@
     </section>
     <div class="separation"></div>
     <footer>
-      <div class="questions">
-        Questions? Call 000-800-919-1694
-    </div>
-    <div class="footer">
-        <div class="footer-item"> 
-            <a href="faq">Investor Relations</a>
-            <a href="faq">Jobs</a>
-            <a href="faq">Ways to Watch</a>
-            <a href="faq">Terms of Use</a>
-            
-        </div>
-
-        <div class="footer-item"> 
-            <a href="#">Help Centre</a>
-            <a href="#">Account</a>
-            <a href="#">Speed Test</a>
-            <a href="#">Legal Notices</a>
-        </div>
+      <div class="questions">Questions? Call 000-800-919-1694</div>
+      <div class="footer">
         <div class="footer-item">
-            <a href="#">Media Centre</a>
-            <a href="#">Privacy</a>
-            <a href="#">Cookie Preferences</a> 
-            <a href="#">Corporate</a>
+          <a href="faq">Investor Relations</a>
+          <a href="faq">Jobs</a>
+          <a href="faq">Ways to Watch</a>
+          <a href="faq">Terms of Use</a>
         </div>
 
         <div class="footer-item">
-            <a href="#">Contact Us</a>
-            <a href="#">Speed Test</a> 
-            <a href="#">Legal Notices</a> 
-            <a href="#">Only on Netflix</a>
+          <a href="#">Help Centre</a>
+          <a href="#">Account</a>
+          <a href="#">Speed Test</a>
+          <a href="#">Legal Notices</a>
         </div>
-    </div>
-    <button class="btn">
-      English <i class="fa-solid fa-caret-down"></i>
-    </button>
-    <p>Netflix India</p>
+        <div class="footer-item">
+          <a href="#">Media Centre</a>
+          <a href="#">Privacy</a>
+          <a href="#">Cookie Preferences</a>
+          <a href="#">Corporate</a>
+        </div>
+
+        <div class="footer-item">
+          <a href="#">Contact Us</a>
+          <a href="#">Speed Test</a>
+          <a href="#">Legal Notices</a>
+          <a href="#">Only on Netflix</a>
+        </div>
+      </div>
+      <button class="btn">
+        English <i class="fa-solid fa-caret-down"></i>
+      </button>
+      <p>Netflix India</p>
     </footer>
   </body>
 </html>
